syntax = "proto3";
option java_multiple_files = true;
package user;
option csharp_namespace = "GrpcClient";

message CreateUserRequest
{
  string name = 1;
  string email = 2;
  string password = 3;
  string profilePicture = 4;
}

message UserEmptyResponse {}

service UserService {
  rpc createAccount(CreateUserRequest) returns (UserEmptyResponse);
}